# tiny-tensorrt

./: CMakeLists.txt  README.md  REFACTORING-SUMMARY.md  Trt.h
docs/: TensorRT-Version-Compatibility.md
plugin/: plugin_utils.h
plugin/CuteSampleDynamicExtPlugin/: CuteSampleDynamicExtPlugin.h
plugin/CuteSamplePlugin/: CuteSamplePlugin.cpp  CuteSamplePlugin.h
samples/sampleDynamicShape/: CMakeLists.txt
samples/sampleINT8/: CMakeLists.txt
samples/tinyexec/: CMakeLists.txt
src/: Int8Calibrator.cpp  Int8Calibrator.h  Trt.cpp  trt_version_compat.h
